got data on house.component.html

--- a/VillageUI/src/app/components/all-houses/all-houses.component.html
+++ b/VillageUI/src/app/components/all-houses/all-houses.component.html
@@ -13,7 +13,6 @@
     <table>
       <thead>
         <!-- <th>Id</th> -->
-        <th>#</th>
         <th>Number</th>
         <th>Street</th>
         <th>City</th>
@@ -42,6 +41,7 @@
     <table class="table table-striped">
   <thead>
     <tr>
+      <th scope="col">#</th>
       <th scope="col">Number</th>
       <th scope="col">Street</th>
       <th scope="col">City</th>
