--- a/VillageUI/src/app/components/house/house.component.html
+++ b/VillageUI/src/app/components/house/house.component.html
@@ -1,9 +1,14 @@
 <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+    <h5 class="card-title"> <--- number</h5>
+    <p class="card-text"> Some quick example text to build on the card title and make up the bulk of the card's content.
     </p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+  <div  *ngIf="oneHouse | async as X">
+    <h1>{{X.number}}</h1>
+    <h1>{{X.city}}</h1>
+    why there is no data?
   </div>
 </div>
