add 'all-apartments' component and service

--- a/VillageUI/src/app/components/all-houses/all-houses.component.html
+++ b/VillageUI/src/app/components/all-houses/all-houses.component.html
@@ -53,7 +53,7 @@
   <tbody>
     <tr *ngFor="let house of houseDTOs; index as i">
       <th scope="row">{{ i + 1 }}</th>
-      <td>{{ house.number | number }}</td>
+      <td [routerLink]="['/house',house.id]" class="button">{{ house.number | number }}</td>
       <td>{{ house.street }}</td>
       <td>{{ house.city }}</td>
       <td>{{ house.country }}</td>
