create apartment c, c apartment s, c nav to apartment

--- a/VillageUI/src/app/components/house/house.component.html
+++ b/VillageUI/src/app/components/house/house.component.html
@@ -39,7 +39,7 @@
     </div>
   </div>
 </div>
-<table>
+<!-- <table>
   <thead>
     <tr>
       <th>ID</th>
@@ -54,7 +54,7 @@
       <td>{{HA.apartmentId}}</td>
     </tr>
   </tbody>
-</table>
+</table> -->
 <!-- <app-all-apartments></app-all-apartments> -->
 <table class="table table-striped">
   <thead>
@@ -68,19 +68,21 @@
       <th scope="col">Full Area</th>
       <th scope="col">Living Space</th>
       <th scope="col">Id Of House</th>
+      <th scope="col">Navigation</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let house of apartmentDTOsByHouseId; index as i">
+    <tr *ngFor="let apartment of apartmentDTOsByHouseId; index as i">
       <th scope="row">{{ i + 1 }}</th>
-      <td>{{ house.id}}</td>
-      <td>{{ house.number}}</td>
-      <td>{{ house.floor }}</td>
-      <td>{{ house.numberOfRooms }}</td>
-      <td>{{ house.population }}</td>
-      <td>{{ house.fullArea }}</td>
-      <td>{{ house.livingSpace }}</td>
-      <td>{{ house.idOfHouse }}</td>
+      <td>{{ apartment.id}}</td>
+      <td>{{ apartment.number}}</td>
+      <td>{{ apartment.floor }}</td>
+      <td>{{ apartment.numberOfRooms }}</td>
+      <td>{{ apartment.population }}</td>
+      <td>{{ apartment.fullArea }}</td>
+      <td>{{ apartment.livingSpace }}</td>
+      <td>{{ apartment.idOfHouse }}</td>
+      <td><button [routerLink]="['/apartment',apartment.id]">Go to apartment {{apartment.id}} page</button></td>
     </tr>
   </tbody>
 </table>
