--- a/VillageUI/src/app/components/edit-house/edit-house.component.html
+++ b/VillageUI/src/app/components/edit-house/edit-house.component.html
@@ -21,7 +21,46 @@
     Postcode:
     <input [(ngModel)]="house.postcode" placeholder="Postcode" />
   </div>
-  <button (click)="updateHouse(house)" *ngIf="house.id">Save</button>
-  <button (click)="deleteHouse(house)" *ngIf="house.id">Delete</button>
-  <button (click)="createHouse(house)" *ngIf="!house.id">Create</button>
+  <button type="button" (click)="updateHouse(house)" *ngIf="house.id">Save</button>  
+  <!-- <button (click)="deleteHouse(house)" *ngIf="house.id">Delete</button> -->
+
+
+<dialog #deleteButton>
+  <div>
+    Are you sure you want to delete house {{house.id}}
+  </div>
+  <span>
+    <button (click)="deleteButton.close()" class="btn btn-success">
+      CANCEL
+    </button>
+    <button (click)="deleteHouse(house)" *ngIf="house.id" (click)="deleteButton.close()" class="btn btn-danger">Delete</button>
+  </span>
+
+</dialog>
+<button (click)="deleteButton.show()" class="btn btn-warning">Del House</button>
+
+  <!-- Button trigger modal -->
+  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Delete House
+  </button> -->
+  
+  <!-- Modal -->
+  <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div> -->
+  <!-- <button (click)="createHouse(house)" *ngIf="!house.id">Create</button> -->
 </div>
