--- a/VillageUI/src/app/components/apartment/apartment.component.html
+++ b/VillageUI/src/app/components/apartment/apartment.component.html
@@ -1,3 +1,18 @@
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">THE APARTMENT</th>
+      <th scope="col">EDIT</th>
+      <!-- <th scope="col">Street</th>
+        <th scope="col">City</th>
+        <th scope="col">Country</th>
+        <th scope="col">Postcode</th>
+        <th scope="col">____</th> -->
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
 <div class="card mb-3" style="max-width: 540px;" *ngIf="oneApartment | async as apartment">
   <style>
     hr.rounded {
@@ -12,6 +27,7 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
+        <button (click)="editApartment(apartment)" type="button" class="btn btn-primary">Edit Apartment</button>
         <p class="card-text">ID:</p>
         <h5 class="card-title">{{apartment.id}}</h5>
         <hr class="rounded">
@@ -30,17 +46,29 @@
         <p class="card-text">Living Space:</p>
         <h5 class="card-title">{{apartment.livingSpace}}</h5>
         <hr class="rounded">
+        <!-- <p class="card-text">Full Area:</p>
+        <h5 class="card-title">{{apartment.fullArea}}</h5>
+        <hr class="rounded"> -->
         <p class="card-text">List of inhabitants!</p>
         <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p> -->
       </div>
     </div>
   </div>
 </div>
+      </td>
+      <td>Click 'Edit Apartment' to edit House
+        <app-edit-apartment [apartment]="apartmentToEdit" (apartmentUpdated)="updateOneApartment($event)"></app-edit-apartment>
+      </td>
+      <!-- <td>{{ house.country }}</td>
+        <td>{{ house.postcode }}</td> -->
+    </tr>
+  </tbody>
+</table>
 <!-- Inhabitants -->
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">#</th> <!--INDEX-->
+      <th scope="col">#</th> <!--INDEX-->      
       <th scope="col">Backend ID</th>
       <th scope="col">Name</th>
       <th scope="col">Lastname</th>
