--- a/VillageUI/src/app/components/edit-house/edit-house.component.html
+++ b/VillageUI/src/app/components/edit-house/edit-house.component.html
@@ -29,7 +29,7 @@
   <div>
     Are you sure you want to delete house {{house.id}}
   </div>
-  <span>
+  <span style="display: flex; justify-content: space-between">
     <button (click)="deleteButton.close()" class="btn btn-success">
       CANCEL
     </button>
