--- a/VillageUI/src/app/components/edit-apartment/edit-apartment.component.html
+++ b/VillageUI/src/app/components/edit-apartment/edit-apartment.component.html
@@ -33,7 +33,7 @@
     <div>
       Are you sure you want to delete apartment {{apartment.id}}
     </div>
-    <span>
+    <span style="display: flex; justify-content: space-between">
       <button (click)="deleteButton.close()" class="btn btn-success">
         CANCEL
       </button>
