fix modal button, fix edit in modal window

--- a/VillageUI/src/app/components/modal/modal.component.html
+++ b/VillageUI/src/app/components/modal/modal.component.html
@@ -1,4 +1,16 @@
-<ng-template #content let-modal>
+<!-- <div class="modal-header">
+  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+  <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
+</div>
+<div class="modal-body">...</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
+    Close
+  </button>
+  <button type="button" class="btn btn-primary">Save changes</button>
+</div> -->
+
+<!-- <ng-template #content let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
@@ -24,4 +36,4 @@
 
 <hr />
 
-<pre>{{ closeResult }}</pre>
+<pre>{{ closeResult }}</pre> -->
