--- a/VillageUI/src/app/components/apartment/apartment.component.html
+++ b/VillageUI/src/app/components/apartment/apartment.component.html
@@ -99,7 +99,31 @@
         <app-edit-inhabitant [inhabitant]="inhabitantToEdit" (inhabitantUpdated)="updateOneInhabitant($event)"></app-edit-inhabitant>
       </td>
       <td>
-        <dialog #deleteButton>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Launch demo modal
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                        <button (click)="editInhabitant(inhabitant)" type="button" class="btn btn-primary">Edit Apartment</button>
+                        <app-edit-inhabitant [inhabitant]="inhabitantToEdit"
+                          (inhabitantUpdated)="updateOneInhabitant($event)"></app-edit-inhabitant>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <dialog #deleteButton>
             <div>
               Are you sure you want to delete apartment {{inhabitant.id}}
             </div>
@@ -107,13 +131,12 @@
               <button (click)="deleteButton.close()" class="btn btn-success">
                 CANCEL
               </button>
-              <!-- CLOSE BUTTON -->
               <button (click)="test()" *ngIf="inhabitant.id" (click)="deleteButton.close()"
                 class="btn btn-danger">Delete</button>
             </span>
           
           </dialog>
-          <button (click)="deleteButton.show()" class="btn btn-warning">Del Apartment</button>
+          <button (click)="deleteButton.show()" class="btn btn-warning">Del Apartment</button> -->
         
       </td>
       <!-- <td><ngbd-modal></ngbd-modal></td> -->
