--- a/VillageUI/src/app/components/edit-house/edit-house.component.html
+++ b/VillageUI/src/app/components/edit-house/edit-house.component.html
@@ -21,46 +21,23 @@
     Postcode:
     <input [(ngModel)]="house.postcode" placeholder="Postcode" />
   </div>
-  <button type="button" (click)="updateHouse(house)" *ngIf="house.id">Save</button>  
-  <!-- <button (click)="deleteHouse(house)" *ngIf="house.id">Delete</button> -->
-
-
-<dialog #deleteButton>
-  <div>
-    Are you sure you want to delete house {{house.id}}
-  </div>
   <span style="display: flex; justify-content: space-between">
-    <button (click)="deleteButton.close()" class="btn btn-success">
-      CANCEL
-    </button>
-    <button (click)="deleteHouse(house)" *ngIf="house.id" (click)="deleteButton.close()" class="btn btn-danger">Delete</button>
-  </span>
-
-</dialog>
-<button (click)="deleteButton.show()" class="btn btn-warning">Del House</button>
-
-  <!-- Button trigger modal -->
-  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Delete House
-  </button> -->
-  
-  <!-- Modal -->
-  <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
+  <button type="button" class="btn btn-primary" (click)="updateHouse(house)" *ngIf="house.id">Save changes</button>
+  <button type="button" class="btn btn-outline-success" (click)="createHouse(house)" *ngIf="!house.id">Create</button>
+  <dialog #deleteButton>
+    <div>
+      Are you sure you want to delete house {{house.id}}
     </div>
-  </div> -->
-  <!-- <button (click)="createHouse(house)" *ngIf="!house.id">Create</button> -->
+    <span style="display: flex; justify-content: space-between">
+      <button (click)="deleteButton.close()" class="btn btn-success">
+        CANCEL
+      </button>
+      <button (click)="deleteHouse(house)" *ngIf="house.id" (click)="deleteButton.close()"
+        class="btn btn-danger">Delete</button>
+    </span>
+  
+  </dialog>
+  <button (click)="deleteButton.show()" class="btn btn-warning" *ngIf="house.id">Del House</button>
+  </span>
+  
 </div>
