--- a/VillageUI/src/app/components/all-houses/all-houses.component.html
+++ b/VillageUI/src/app/components/all-houses/all-houses.component.html
@@ -6,10 +6,11 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<h1>HELLO</h1>
+<h1>Welcome to Village!</h1>
+<h3>We have {{houseDTOs.length}} houses.</h3>
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="initNewHouse()">
+  Create new House
 </button>
 
 <!-- Modal -->
@@ -17,50 +18,23 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">New House Creation Window</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        <app-edit-house [house]="houseToEdit" (homeUpdated)="updateOneHouse($event)"></app-edit-house>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
       </div>
     </div>
   </div>
 </div>
 <!--  -->
-<div>{{houseDTOs.length}} <-- len</div>
     <!-- <div>{{X.length}} <-- len of X</div> -->
-    <button (click)="initNewHouse()">Create new House</button>
-    <table>
-      <thead>
-        <!-- <th>Id</th> -->
-        <th>Number</th>
-        <th>Street</th>
-        <th>City</th>
-        <th>Country</th>
-        <th>Postcode</th>
-        <th>____</th>
-      </thead>
-      <tbody *ngIf="houseDTOs.length">
-        <tr *ngFor="let house of houseDTOs">
-          <!-- <td>{{ house.id }}</td> -->
-          <td>{{ house.number }}</td>
-          <td>{{ house.street }}</td>
-          <td>{{ house.city }}</td>
-          <td>{{ house.country }}</td>
-          <td>{{ house.postcode}}</td>
-          <!-- <td><button (click)="editHouse(house)">Edit</button></td> -->
-          <td><button [routerLink]="['/house',house.id]">Go to this home page</button></td>
-          <!-- <td></td> -->
-        </tr>
-      </tbody>
-    </table>
-    <app-edit-house [house]="houseToEdit" (homeUpdated)="updateOneHouse($event)"></app-edit-house>
-
-    <p>Table is just a mapping of objects to table rows with <code>ngFor</code></p>
+    <!-- <button (click)="initNewHouse()">Create new House</button>
+    <app-edit-house [house]="houseToEdit" (homeUpdated)="updateOneHouse($event)"></app-edit-house> -->
 
 <table class="table table-striped">
   <thead>
@@ -71,17 +45,18 @@
       <th scope="col">City</th>
       <th scope="col">Country</th>
       <th scope="col">Postcode</th>
-      <th scope="col">____</th>
+      <th scope="col">Navigation</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let house of houseDTOs; index as i">
       <th scope="row">{{ i + 1 }}</th>
-      <td [routerLink]="['/house',house.id]" class="button">{{ house.number | number }}</td>
+      <td><a href="/house/1"></a>{{ house.number | number }}</td>
       <td>{{ house.street }}</td>
       <td>{{ house.city }}</td>
       <td>{{ house.country }}</td>
       <td>{{ house.postcode }}</td>
+      <td><button [routerLink]="['/house',house.id]">Go to home {{house.id}}</button></td>
     </tr>
   </tbody>
 </table>
