--- a/VillageUI/src/app/components/apartment/apartment.component.html
+++ b/VillageUI/src/app/components/apartment/apartment.component.html
@@ -49,8 +49,6 @@
         <!-- <p class="card-text">Full Area:</p>
         <h5 class="card-title">{{apartment.fullArea}}</h5>
         <hr class="rounded"> -->
-        <p class="card-text">List of inhabitants!</p>
-        <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p> -->
       </div>
     </div>
   </div>
@@ -65,7 +63,8 @@
   </tbody>
 </table>
 <!-- Inhabitants -->
-<table class="table table-striped">
+<h1 class="modal-title fs-5" *ngIf="inhabitantDTOsByApartmentId.length">List of inhabitants!</h1>
+<table class="table table-striped" *ngIf="inhabitantDTOsByApartmentId.length">
   <thead>
     <tr>
       <th scope="col">#</th> <!--INDEX-->      
@@ -78,8 +77,7 @@
       <th scope="col">Email</th>
       <th scope="col">Id Of Apartment</th>
       <th scope="col">Is Owner</th>
-      <th>TEST</th>
-      <th scope="col">Modular Window button !</th>
+      <th scope="col">.</th>
     </tr>
   </thead>
   <tbody>
@@ -95,12 +93,8 @@
       <td>{{ inhabitant.idOfApartment }}</td>
       <td>{{ inhabitant.isOwner }}</td>
       <td>
-        <button (click)="editInhabitant(inhabitant)" type="button" class="btn btn-primary">Edit Apartment</button>
-        <app-edit-inhabitant [inhabitant]="inhabitantToEdit" (inhabitantUpdated)="updateOneInhabitant($event)"></app-edit-inhabitant>
-      </td>
-      <td>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-          Launch demo modal
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="editInhabitant(inhabitant)">
+          Edit Inhabitant
         </button>
 
         <!-- Modal -->
@@ -108,39 +102,21 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">{{inhabitant.name}} edit page</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                        <button (click)="editInhabitant(inhabitant)" type="button" class="btn btn-primary">Edit Apartment</button>
-                        <app-edit-inhabitant [inhabitant]="inhabitantToEdit"
-                          (inhabitantUpdated)="updateOneInhabitant($event)"></app-edit-inhabitant>
+                <!-- <button (click)="editInhabitant(inhabitant)" type="button" class="btn btn-primary">Edit Inhabitant</button> -->
+                <app-edit-inhabitant [inhabitant]="inhabitantToEdit"
+                  (inhabitantUpdated)="updateOneInhabitant($event)"></app-edit-inhabitant>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
               </div>
             </div>
           </div>
-        </div>
-        <!-- <dialog #deleteButton>
-            <div>
-              Are you sure you want to delete apartment {{inhabitant.id}}
-            </div>
-            <span style="display: flex; justify-content: space-between">
-              <button (click)="deleteButton.close()" class="btn btn-success">
-                CANCEL
-              </button>
-              <button (click)="test()" *ngIf="inhabitant.id" (click)="deleteButton.close()"
-                class="btn btn-danger">Delete</button>
-            </span>
-          
-          </dialog>
-          <button (click)="deleteButton.show()" class="btn btn-warning">Del Apartment</button> -->
-        
+        </div>        
       </td>
-      <!-- <td><ngbd-modal></ngbd-modal></td> -->
-      <!-- <td><button [routerLink]="['/apartment',inhabitant.id]">Go to inhabitant {{inhabitant.id}} page</button></td> -->
     </tr>
   </tbody>
 </table>
