refactor back end.

--- a/VillageUI/src/app/components/edit-inhabitant/edit-inhabitant.component.html
+++ b/VillageUI/src/app/components/edit-inhabitant/edit-inhabitant.component.html
@@ -8,6 +8,10 @@
     <input [(ngModel)]="inhabitant.lastname" placeholder="Last name" />
   </div>
   <div>
+    Personal Code:
+    <input [(ngModel)]="inhabitant.personalCode" placeholder="Personal Code" />
+  </div>
+  <div>
     Date Of Birth:
     <input [(ngModel)]="inhabitant.dateOfBirth" placeholder="Date Of Birth" />
   </div>
