update buttons. create edit and cancel edit button

--- a/VillageUI/src/app/components/edit-apartment/edit-apartment.component.html
+++ b/VillageUI/src/app/components/edit-apartment/edit-apartment.component.html
@@ -29,7 +29,7 @@
   <button type="button" class="btn btn-primary" (click)="updateApartment(apartment)" *ngIf="apartment.id">Save changes</button>
   <!-- <button (click)="deleteApartment(house)" *ngIf="apartment.id">Delete</button> -->
   
-    <button type="button" class="btn btn-primary" (click)="toggleShowMeEdit(showMeEdit)">Close</button>
+    <!-- <button type="button" class="btn btn-primary" (click)="toggleShowMeEdit(showMeEdit)">Close</button> -->
 
   <dialog #deleteButton>
     <div>
