--- a/VillageUI/src/app/components/apartment/apartment.component.html
+++ b/VillageUI/src/app/components/apartment/apartment.component.html
@@ -1,4 +1,4 @@
-<table class="table table-striped">
+<table class="table table-striped" *ngIf="oneApartment | async as apartment">
   <thead>
     <tr>
       <th scope="col">THE APARTMENT</th>
@@ -8,7 +8,7 @@
   <tbody>
     <tr>
       <td>
-<div class="card mb-3" style="max-width: 540px;" *ngIf="oneApartment | async as apartment">
+<div class="card mb-3" style="max-width: 540px;">
   <style>
     hr.rounded {
       border-top: 8px solid #918a8a;
@@ -22,8 +22,9 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <button (click)="editApartment(apartment)" (click)="toggleShowMeEdit()" type="button" class="btn btn-primary">Edit Apartment</button>
-        <button (click)="showBoolean()" type="button" class="btn btn-danger">showMeEdit</button>
+        <!-- Original 2 buttons for testing -->
+        <!-- <button (click)="editApartment(apartment)" (click)="toggleShowMeEdit()" type="button" class="btn btn-primary">Edit Apartment</button>
+        <button (click)="showBoolean()" type="button" class="btn btn-danger">showMeEdit</button> -->
         <p class="card-text">ID:</p>
         <h5 class="card-title">{{apartment.id}}</h5>
         <hr class="rounded">
@@ -50,10 +51,14 @@
   </div>
 </div>
       </td>
-      <td *ngIf="oneApartment | async as apartment">Click 'Edit Apartment' to edit Apartment: <b>{{apartment.id}}</b>
+      <td>Click 'Edit Apartment' to edit Apartment: <b>{{apartment.id}}</b>
+        <br>
+        <button *ngIf="!showMeEdit" (click)="editApartment(apartment)" (click)="toggleShowMeEdit()" type="button"
+          class="btn btn-primary">'Edit Apartment'</button>
+        <button *ngIf="showMeEdit" (click)="toggleShowMeEdit()" type="button" class="btn btn-success">Cancel 'Edit'</button>
+
         <app-edit-apartment 
-        [apartment]="apartmentToEdit" 
-        [showMeEdit]="showMeEdit"
+        [apartment]="apartmentToEdit"
         (apartmentUpdated)="updateOneApartment($event)" 
         *ngIf="showMeEdit"></app-edit-apartment>
       </td>
@@ -97,7 +102,7 @@
           Edit Inhabitant
         </button>
 
-        <!-- Modal -->
+        <!-- Modal Window -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
