--- a/VillageUI/src/app/components/apartment/apartment.component.html
+++ b/VillageUI/src/app/components/apartment/apartment.component.html
@@ -115,7 +115,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">edit page</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Edit page!</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -124,7 +124,7 @@
                   (inhabitantUpdated)="updateOneInhabitant($event)"></app-edit-inhabitant>
               </div>
               <div class="modal-footer">
-                <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close edit page</button>
               </div>
             </div>
           </div>
